<preference-headers xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:keep="@xml/pref_headers">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.m5_projectsetupuserstoriesandconfiguration.views.Settings"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.m5_projectsetupuserstoriesandconfiguration.views.Settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.m5_projectsetupuserstoriesandconfiguration.views.Settings"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
