<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.MainMenu"
    tools:showIn="@layout/activity_main_menu">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:background="@android:color/black"
            android:cropToPadding="false"
            android:src="@drawable/mainscreen" />
    </FrameLayout>

    <TextView
        android:id="@+id/deluxe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:background="#80000000"
        android:fontFamily="@font/aldrich"
        android:text="@string/deluxe"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_traders" />

    <TextView
        android:id="@+id/space_traders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:background="#80000000"
        android:fontFamily="@font/aldrich"
        android:text="@string/space_traders"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:background="@color/design_default_color_primary_dark"
        android:lineSpacingExtra="10sp"
        android:onClick="onNewGamePressed"
        android:text="@string/new_game"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deluxe" />

    <Button
        android:id="@+id/load_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="139dp"
        android:background="@color/design_default_color_primary_dark"
        android:lineSpacingExtra="10sp"
        android:onClick="onLoadGamePressed"
        android:text="@string/load_game"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="162dp"
        android:background="@color/design_default_color_primary_dark"
        android:onClick="onSettingsPressed"
        android:text="@string/settings"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_game" />

</android.support.constraint.ConstraintLayout>